name:                language-thrift-examples
version:             0.1.0.0
author:              Abhinav Gupta
maintainer:          mail@abhinavg.net
build-type:          Simple
cabal-version:       >=1.10

executable reformatIDL
  main-is          : reformatIDL.hs
  build-depends    : base            >= 4.7 && <4.9
                   , language-thrift

                   , ansi-wl-pprint
                   , trifecta
                   , wl-pprint
  default-language : Haskell2010

executable generateHaskellTypes
  main-is          : generateHaskellTypes.hs
  build-depends    : base            >= 4.7 && <4.9
                   , language-thrift

                   , ansi-wl-pprint
                   , text
                   , trifecta
                   , wl-pprint
  default-language : Haskell2010
