name: language-thrift-examples
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
maintainer: mail@abhinavg.net
author: Abhinav Gupta

executable reformatIDL
    main-is: reformatIDL.hs
    build-depends:
        base >=4.7 && <4.9,
        language-thrift -any,
        ansi-wl-pprint -any,
        trifecta -any,
        wl-pprint -any
    default-language: Haskell2010

executable generateHaskellTypes
    main-is: generateHaskellTypes.hs
    build-depends:
        base >=4.7 && <4.9,
        language-thrift -any,
        ansi-wl-pprint -any,
        text -any,
        trifecta -any,
        wl-pprint -any
    default-language: Haskell2010

